--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-.App {
-  text-align: center;
+.App{
+    background-color: #6053C9;
+    height: 100vh;
+    width: 100%;
+    border-radius: 40px;
 }
-
